--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,11 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Media Query Escape
+
+// Moble
+@mobile: ~"(max-width: 500px)";
+
+// Tablet
+@tablet: ~"(max-width: 800px)";
