--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,23 @@
 .home {
+  max-width: 800px;
+  width: 100%;
+
+  @media @mobile {
+    width: 90%;
+  }
+
+  @media @tablet {
+    width: 90%;
+  }
+
+  .intro-section {
+    padding-bottom: 15px;
+    border-bottom: 2px dashed @navigation-border;
+
+    img {
+      margin-bottom: 20px;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,19 +25,38 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
-    .text-content {
-      width: 48%;
-      padding-right: 1%;
+    @media @tablet {
+      flex-wrap: nowrap;
+      width: 100%;
     }
+    @media @mobile {
+      flex-wrap: wrap;
+      width: 100%;
+    }
+  }
 
-    .img-content {
-      width: 48%;
-      padding-left: 1%;
+  .text-content {
+    width: 48%;
+    padding-right: 1%;
 
-      img {
-        border-radius: 10px;
+    @media @mobile {
+      width: 100%;
+    }
+  }
+
+  .img-content {
+    padding-left: 1%;
+
+    img {
+      border-radius: 10px;
+
+      @media @mobile {
+        width: 100%;
+      }
+
+      @media @tablet {
+        align-items: baseline;
+        width: 100%;
       }
     }
   }
@@ -35,6 +73,16 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        order: 1;
+      }
+
+      img {
+        @media @mobile {
+          width: 100%;
+        }
+      }
     }
   }
 
@@ -44,6 +92,10 @@
 
     img {
       border-radius: 10px;
+    }
+
+    @media @mobile {
+      width: 100%;
     }
   }
 
@@ -56,6 +108,41 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        background: @eastern-blue;
+        color: white;
+        padding: 12px 50px;
+        text-align: center;
+        font-size: 2rem;
+        border-radius: 10px;
+        margin-bottom: 10px;
+
+        @media @tablet {
+          font-size: 1.5rem;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      @media @mobile {
+        .button1 {
+          width: 100%;
+          margin-bottom: 20px;
+        }
+      }
+
+      @media @mobile {
+        width: 80%;
+        margin: 0 auto;
+      }
+    }
+
+    @media @mobile {
+      flex-direction: column;
+      margin: 0 auto;
     }
   }
-}// home
+}
