--- a/less/index.css
+++ b/less/index.css
@@ -124,7 +124,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 table {
@@ -139,14 +139,14 @@ html {
 }
 html,
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: "Indie Flower", cursive;
+  font-family: 'Indie Flower', cursive;
 }
 h1 {
   font-size: 4rem;
@@ -179,7 +179,6 @@ img {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 10px;
 }
 @media (max-width: 500px) {
   .mainNavigation {
@@ -200,19 +199,34 @@ img {
 }
 .mainNavigation .navContainer .logo {
   margin-top: 15px;
-  animation: fade-in 0.2s linear infinite alternate;
+  animation: wave 5s linear infinite alternate both;
 }
-@keyframes fade-in {
+@keyframes wave {
   0% {
-    opacity: 0;
+    color: palevioletred;
+    background: paleturquoise;
+  }
+  25% {
+    color: greenyellow;
+    background: gold;
+  }
+  50% {
+    color: cornflowerblue;
+    background: cornflowerblue;
+  }
+  75% {
+    color: gold;
+    background: greenyellow;
   }
   100% {
-    opacity: 1;
+    color: paleturquoise;
+    background: palevioletred;
   }
 }
 @media (max-width: 500px) {
   .mainNavigation .navContainer .logo {
     width: 100%;
+    flex-basis: 100%;
     margin: 15px 0;
   }
 }
@@ -222,13 +236,10 @@ img {
   font-size: 1.6rem;
   width: 40%;
 }
-.mainNavigation .navContainer .nav .navItem {
-  color: black;
-  text-decoration: none;
-}
 @media (max-width: 500px) {
   .mainNavigation .navContainer .nav {
     width: 100%;
+    flex-basis: 100%;
     justify-content: space-between;
   }
 }
@@ -252,11 +263,6 @@ img {
     width: 90%;
   }
 }
-@media (max-width: 800px) {
-  .home {
-    width: 90%;
-  }
-}
 .home .intro-section {
   padding-bottom: 15px;
   border-bottom: 2px dashed #C0C0C0;
@@ -270,18 +276,6 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-@media (max-width: 800px) {
-  .home .content-section {
-    flex-wrap: nowrap;
-    width: 100%;
-  }
-}
-@media (max-width: 500px) {
-  .home .content-section {
-    flex-wrap: wrap;
-    width: 100%;
-  }
-}
 .home .text-content {
   width: 48%;
   padding-right: 1%;
@@ -292,6 +286,7 @@ img {
   }
 }
 .home .img-content {
+  width: 48%;
   padding-left: 1%;
 }
 .home .img-content img {
@@ -302,9 +297,8 @@ img {
     width: 100%;
   }
 }
-@media (max-width: 800px) {
-  .home .img-content img {
-    align-items: baseline;
+@media (max-width: 500px) {
+  .home .img-content {
     width: 100%;
   }
 }
@@ -353,24 +347,27 @@ img {
   margin-bottom: 30px;
 }
 .home .content-pick .destination .btn {
-  background: #17A2B8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  background: #008080;
   color: white;
-  padding: 12px 50px;
-  text-align: center;
-  font-size: 2rem;
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-@media (max-width: 800px) {
-  .home .content-pick .destination .btn {
-    font-size: 1.5rem;
-  }
-}
-.home .content-pick .destination .btn:hover {
-  cursor: pointer;
+  border-radius: 15px;
+  width: 80%;
+  height: 45px;
 }
 @media (max-width: 500px) {
-  .home .content-pick .destination .button1 {
+  .home .content-pick .destination .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
+    background: #17A2B8;
+    color: white;
+    border-radius: 15px;
+    width: 80%;
+    height: 45px;
     width: 100%;
     margin-bottom: 20px;
   }
