--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,26 @@
-// Mixins in here
+.flexCentered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button(@font-size, @background, @color) {
+  .flexCentered;
+  font-size: @font-size;
+  background: @background;
+  color: @color;
+  border-radius: 15px;
+  width: 80%;
+  height: 45px;
+}
+
+.keyframes(@name; @arguments) {
+  @keyframes @name {
+    @arguments();
+  }
+}
+
+
+.animation(@arguments) {
+  animation: @arguments;
+}
