Fixed mixin prbolems

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -42,7 +42,7 @@
       width: 40%;
 
       .navItem {
-        color: black;
+        color: @font-color;
         text-decoration: none;
       }
 
