--- a/less/home-page.less
+++ b/less/home-page.less
@@ -111,7 +111,7 @@
 
       .btn {
         background: @eastern-blue;
-        color: white;
+        color: @font-color;
         padding: 12px 50px;
         text-align: center;
         font-size: 2rem;
