--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-.flexCentered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -223,8 +218,12 @@ img {
   width: 40%;
 }
 .mainNavigation .navContainer .nav .navItem {
-  color: black;
+  color: #212529;
   text-decoration: none;
+}
+.mainNavigation .navContainer .nav .navItem:hover {
+  font-weight: bold;
+  transition: 0.1s ease-out;
 }
 @media (max-width: 500px) {
   .mainNavigation .navContainer .nav {
@@ -234,7 +233,7 @@ img {
 }
 .footer {
   width: 100%;
-  border-top: 2px dashed silver;
+  border-top: 2px dashed #C0C0C0;
   background: #FFEBCD;
 }
 .footer p {
@@ -293,6 +292,12 @@ img {
 }
 .home .img-content {
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .img-content {
+    padding-left: 0%;
+    width: 100%;
+  }
 }
 .home .img-content img {
   border-radius: 10px;
@@ -354,25 +359,26 @@ img {
 }
 .home .content-pick .destination .btn {
   background: #17A2B8;
-  color: white;
+  color: #FFFFFF;
   padding: 12px 50px;
   text-align: center;
   font-size: 2rem;
   border-radius: 10px;
   margin-bottom: 10px;
 }
+.home .content-pick .destination .btn:hover {
+  background: #212529;
+  cursor: pointer;
+}
 @media (max-width: 800px) {
   .home .content-pick .destination .btn {
     font-size: 1.5rem;
   }
 }
-.home .content-pick .destination .btn:hover {
-  cursor: pointer;
-}
 @media (max-width: 500px) {
-  .home .content-pick .destination .button1 {
-    width: 100%;
-    margin-bottom: 20px;
+  .home .content-pick .destination .btn {
+    font-size: 2rem;
+    color: #FFFFFF;
   }
 }
 @media (max-width: 500px) {
@@ -385,5 +391,6 @@ img {
   .home .content-pick {
     flex-direction: column;
     margin: 0 auto;
+    margin-bottom: 34px;
   }
 }
