--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,25 +1,28 @@
-.flexCentered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// Class Demo Example;
 
-.button(@font-size, @background, @color) {
-  .flexCentered;
-  font-size: @font-size;
-  background: @background;
-  color: @color;
-  border-radius: 15px;
-  width: 80%;
-  height: 45px;
-}
+// .flexCentered {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .button(@font-size, @background, @color) {
+//   .flexCentered;
+//   font-size: @font-size;
+//   background: @background;
+//   color: @color;
+//   border-radius: 15px;
+//   width: 80%;
+//   height: 45px;
+// }
+
+// Animation for Logo
 
 .keyframes(@name; @arguments) {
   @keyframes @name {
     @arguments();
   }
 }
-
 
 .animation(@arguments) {
   animation: @arguments;
