--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,3 @@
-
 // Color assignments 
 @font-color: @shark;
 @button-bg: @eastern-blue;
@@ -15,7 +14,7 @@
 
 // Media Query Escape
 
-// Moble
+// Mobile
 @mobile: ~"(max-width: 500px)";
 
 // Tablet
