added paramatrix for button

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -115,13 +115,7 @@
       margin-bottom: 30px;
 
       .btn {
-        background: @eastern-blue;
-        color: @white;
-        padding: 12px 50px;
-        text-align: center;
-        font-size: 2rem;
-        border-radius: 10px;
-        margin-bottom: 10px;
+       .button;
 
         &:hover {
           background: @shark;
