--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,15 +6,16 @@
 //   align-items: center;
 // }
 
-// .button(@font-size, @background, @color) {
-//   .flexCentered;
-//   font-size: @font-size;
-//   background: @background;
-//   color: @color;
-//   border-radius: 15px;
-//   width: 80%;
-//   height: 45px;
-// }
+.button(@font-size, @background, @color) {
+  font-size: @font-size;
+  background: @background;
+  color: @color;
+  padding: 12px 50px;
+  text-align: center;
+  font-size: 2rem;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
 
 // Animation for Logo
 
